<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Login.LoginActivity"
    android:background="@color/colorGray2">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_box_design"
            android:hint="@string/signup_email"
            android:padding="@dimen/material_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCompanyName" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_box_design"
            android:hint="@string/signup_password"
            android:padding="@dimen/material_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_box_design"
            android:hint="@string/signup_confirm_password"
            android:padding="@dimen/material_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <EditText
            android:id="@+id/txtContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_box_design"
            android:hint="@string/signup_contact"
            android:padding="@dimen/material_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword" />

        <EditText
            android:id="@+id/txtCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_box_design"
            android:hint="@string/signup_company_name"
            android:padding="@dimen/material_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/blueTint"
            android:text="@string/signup_tile"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtContact" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="#000C0C0C"
            android:text="@string/signup_tile"
            android:textColor="@color/fontColor2"
            android:textSize="@dimen/material_text_headline"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/signup_already_account"
            android:textColor="@color/fontColor2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnRegister" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/signup_login"
            android:textColor="@color/fontColor2"
            app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/lighterGray"
            app:layout_constraintBottom_toTopOf="@+id/txtCompanyName"
            app:layout_constraintEnd_toEndOf="@+id/txtCompanyName"
            app:layout_constraintStart_toStartOf="@+id/txtCompanyName" />

        <View
            android:id="@+id/view10"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/lighterGray"
            app:layout_constraintBottom_toTopOf="@+id/txtEmail"
            app:layout_constraintEnd_toEndOf="@+id/txtCompanyName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/txtCompanyName"
            app:layout_constraintTop_toBottomOf="@+id/txtCompanyName" />

        <View
            android:id="@+id/view11"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/lighterGray"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"
            app:layout_constraintEnd_toEndOf="@+id/txtCompanyName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtCompanyName"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <View
            android:id="@+id/view12"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/lighterGray"
            app:layout_constraintBottom_toTopOf="@+id/txtConfirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/txtCompanyName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/txtCompanyName"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <View
            android:id="@+id/view13"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/lighterGray"
            app:layout_constraintBottom_toTopOf="@+id/txtContact"
            app:layout_constraintEnd_toEndOf="@+id/txtCompanyName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtCompanyName"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword" />

        <View
            android:id="@+id/view9"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/lighterGray"
            app:layout_constraintEnd_toEndOf="@+id/txtCompanyName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtCompanyName"
            app:layout_constraintTop_toBottomOf="@+id/txtContact" />

        <View
            android:id="@+id/view7"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/lighterGray"
            app:layout_constraintBottom_toBottomOf="@+id/txtContact"
            app:layout_constraintEnd_toStartOf="@+id/txtPassword"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <View
            android:id="@+id/view8"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/lighterGray"
            app:layout_constraintBottom_toBottomOf="@+id/txtContact"
            app:layout_constraintStart_toEndOf="@+id/txtEmail"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/policy"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/policy2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9" />

</android.support.constraint.ConstraintLayout>
